compiler/testData/diagnostics/tests/dataClasses/innerOuterDataClass.kt
// FIR_IDENTICAL
<!WRONG_MODIFIER_CONTAINING_DECLARATION!>inner<!> <!INCOMPATIBLE_MODIFIERS!>data<!> class Outer(konst x: Int)